--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
+    "@material-ui/core": "^3.1.0",
+    "@material-ui/icons": "^3.0.1",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -41,12 +43,11 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
-    "chalk": "^2.4.1", 
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "^3.3.4",
     "jest": "^23.6.0",
-    "webpack-dev-server": "2.5.1",
-    "react-test-renderer": "^16.5.1"
+    "react-test-renderer": "^16.5.1",
+    "webpack-dev-server": "2.5.1"
   }
 }
